sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:9: error: ';' expected but ')' found.
			setValeur(j,getValeur(gap)))
                                                   ^